fix: Fix header link action spacing in production
parcel watch and parcel build don't produce the CSS in the same order.

--- a/src/assets/stylesheets/_header.css
+++ b/src/assets/stylesheets/_header.css
@@ -18,6 +18,10 @@
     padding: var(--space-medium) var(--space-large);
 }
 
+.header__link--action {
+    padding: var(--space-smaller) var(--space-medium);
+}
+
 .header__link--home {
     font-weight: bold;
 }
